# dsdkexample

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
local/: .gitignore  config.yaml
notebooks/: .gitignore  dsdkexample.ipynb
secrets/: example_config.yaml
src/dsdkexample/: __init__.py  __main__.py  cli.py  sql.py
tests/: conftest.py  test_dsdkexample.py
