[metadata]
long_description = file: readme.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = 1

[options]
tests_require = pytest

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest


[flake8]
max-complexity = 10
max-line-length = 79
exclude = ci,docs
ignore = C812,C813,C814,C815,D401,N806


[matrix]
python_versions =
    3.7
    3.8
coverage_flags =
    cover: true
    nocover: false


[mypy]
follow_imports = normal
ignore_missing_imports = True


[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --cov=dsdkexample
    --cov-report=term-missing
    --strict
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.md
    --tb=short
testpaths =
    tests
